argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd
  labels:
    name: argocd
spec:
  rules:
  - host: argocd.127-0-0-1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
    - hosts:
      - argocd.127-0-0-1.nip.io
      secretName: argo-tls
